2017-04-27 Werner S Freund
	* Fix to handle new numpy version which changed the way the
	fortran_contiguous and c_contiguous flags are set on 2D arrays.
	* Tagging RingerCore-01-00-08.

2017-01-24 Werner S Freund
	* Workaround panda submission issue that adds extra excludeFiles without
	checking if appending a comma is needed.

2017-01-22 Werner S Freund
	* Version also working on the grid.
	* Tagging RingerCore-01-00-07.

2017-01-22 Werner S Freund
	* Plenty of bug fixes, now tuning operational at loboc and will be tested
	on the grid.
	* Tagging RingerCore-01-00-06.

2017-01-21 Werner S Freund
	* Separated grid from no_color, allowing to run on grid mode with color
	* Bug fix on LimitedTypeList, which was not adding __init__ method
	due to object/list __init__ methods.
	* Tagging RingerCore-01-00-05.

2017-01-20 Werner S Freund
	* Added tex/beamer api.
	* Silenced boost dirname complaint when no boost is available in the
	LD_LIBRARY_PATH.
	* Improved LimitedTypeList to check if base classes are list subclasses
	as well as if they declare _acceptedTypes (where the first base
	_acceptedTypes will be used by default).
	* Only add __init__ method for LimitedTypeList when it does not
	inherit from a LimitedTypeList.
	* Added simple method to calculate function execution time.
	* Bug fix on inspect_list_attrs when depth was zero and wantedTypes was None
	* Tagging RingerCore-01-00-04.

2017-01-12 Werner S Freund
	* Fixed Logger overriding class attributes for its message methods without
	when starting without '_'
	* Tagging RingerCore-01-00-03.

2017-01-12 Werner S Freund
	* Protect against wrong type setup on cluster manager setup
	* Tagging RingerCore-01-00-02.

2017-01-12 Werner S Freund
	* Improved Configured class to detect auto-configuration issues;
	* Handle argparse inexact argument matching for cluster-manager option;
	* Added ncpus configuration to local cluster jobs;
	* Logger instances now redirects message displaying methods to  the _logger
	Attribute.