@@ -1,3 +1,6 @@
+2017-04-30 Werner S Freund
+	* Changed beamer outline format.
+
 2017-04-27 Werner S Freund
 	* Fix to handle new numpy version which changed the way the
 	fortran_contiguous and c_contiguous flags are set on 2D arrays.
